added 95% CIs to the simulation regression

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -258,7 +258,7 @@ Not all 25 scenarios depicted in figure \@ref(fig:5-5-sims) may be realistic, bu
 
 Although the temporal trends in figure \@ref(fig:5-5-sims) are complex and the effects of $\e(R)$ and $\var(R)$ can be hard to disentangle, two surprisingly simple relationships emerge when home-range size is shown as a function of either $\e(R)$ or $\var(R)$, rather than time. Both $\e(R)$ and $\var(R)$ affect spatial needs precisely as we hypothesized (figure \@ref(fig:5-5-reg)).<!--, although we found that the effect of $\var(R)$ is closer linear than we expected (it is mostly sub-linear as long as $H$ is sufficiently far from zero). We ensured this was not due to a low maximum $\var(R)$ (as in the left-hand side of figure \@ref(fig:s2-hyp)) by simulating within the range $\sigma^2(t) \in [2\,500, 250\,000] \implies \sigma \in [50, 500]$, since the range of $\e(R)$ was $\mu(t) \in [100, 200]$.--> We believe the approximately linear effect of $\var(R)$ on $H$ is mainly due to two factors. Firstly, $H$ scales superlinearly with the standard deviation in $R$ (as $\sqrt{\var(R)}$ is on the same scale as $\e(R)$; not shown), which would necessarily imply that $H$ increases *sub*linearly with $\var(R)$. Secondly, the animal's movement was simulated to be range resident within an homogeneous environment. Since real-world landscapes are spatially heterogeneous in both $\e(R)$ and $\var(R)$, animals may choose to shift their home range to a new area following a stochastic event that caused $\mu(t)$ to decrease, such as a fire or a flood. Thus, we hypothesize that our simulations may be underestimating animals' responses to spatiotemporal changes in $\e(R)$ and $\var(R)$, since the simulated animals cannot select for areas of higher $\e(R)$ or lower $\var(R)$. Additionally, the simulations also ignore how competition, movement costs, predation, and other factors may affect the effects of $\e(R)$ and $\var(R)$ on $H$. While these are definitely important effects that should be accounted for [@jetz_scaling_2004], doing so was beyond the scope of this paper.
 
-```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Additive Model for Location and Scale (GAMLS; Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma location-scale family of distributions ($\\tt{mgcv\\!::\\!gammals})$. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both the location (i.e., mean) of $H$ and its scale parameter. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in spatial needs strongly increases with mean spatial needs.", out.width='100%'}
+```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements with 95\\% credible intervals for the mean (overlapping the line). Credible intervals were calculated assuming a gaussian posterior distribution on the link scale. The relationships were estimated using a Generalized Additive Model for Location and Scale (GAMLS; Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma location-scale family of distributions ($\\tt{mgcv\\!::\\!gammals})$. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both the location (i.e., mean) of $H$ and its scale parameter. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in spatial needs strongly increases with mean spatial needs.", out.width='100%'}
 knitr::include_graphics('../figures/simulation-regression-plots.png')
 ```
 
@@ -409,7 +409,7 @@ It is also worth noting that carnivores may be more susceptible to changes in $\
 
 # Acknowledgements
 
-We would like to thank all those who provided feedback on all posters, presentation, and writings related to this project. In particular, we thank all those who provided feedback on the manuscript despite not being authors, namely: Aimee Chhen, Lauren Mills, and Sarah Wyse.
+We would like to thank all those who provided feedback on all posters, presentation, and writings related to this project. In particular, we thank all those who provided feedback on the manuscript despite not being authors, namely: Aimee Chhen, Chris Fleming, Lauren Mills, and Sarah Wyse.
 
 \newpage
 
