--- a/writing/appendix-2-simulations.Rmd
+++ b/writing/appendix-2-simulations.Rmd
@@ -1,5 +1,5 @@
 ---
-title: \large How resource abundance and stochasticity affect animals' spatial needs
+title: \large How resource abundance and stochasticity affect animals' space-use requirements
 subtitle: "Appendix 2: Simulations"
 author:
   - name: Stefano Mezzini
@@ -78,13 +78,13 @@ knitr::opts_chunk$set(eval = FALSE,         # do not run R code
 
 This appendix illustrates all the steps necessary to produce the simulation figures in the main manuscript. For ease of reference, we also include the figures here (figures \@ref(fig:5-5-sims) and \@ref(fig:5-5-reg)). To achieve full transparency while minimizing computational times, the code illustrated in this pdf is not executed during the knitting of the document. Instead, the R Markdown document (`writing/appendix-2-simulations.Rmd`) contains code chunks that import the `RDS` files saved by the scripts used during the analysis via `R` code that is not printed in the pdf file. Although one can replicate the analyses by running the code in this pdf, we suggest only using this document for illustrative purposes and as a general guide. We suggest using the `R` scripts to replicate the simulations, instead.
 
-```{r 5-5-sims, eval=TRUE, echo=FALSE, fig.cap="Simulated home range sizes, $H$, of an organism living in habitats where the mean and variance in resources are constant, linearly increasing, cyclical, drifting, or erratic over time (and homogenous over space). Note how $H$ decreases nonlinearly as $\\mu(t)$ increases and increases nonlinearly as $\\sigma^2(t)$ increases. Additionally, the variance in $H$ is higher when $\\mu(t)$ is lower or $\\sigma^2(t)$ is higher, and changes in $\\sigma^2(t)$ have greater impacts when $\\mu(t)$ is low.", out.width='100%'}
-knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/mean-variance-5-by-5-hr-sims.png',
+```{r 5-5-sims, eval=TRUE, echo=FALSE, fig.cap="Simulated home range sizes, $H$, of an organism living in habitats where the mean and variance in resources are constant, linearly increasing, cyclical, drifting, or erratic over time (and homogenous over space). Note how $H$ decreases nonlinearly as $\\mu(t)$ increases and increases nonlinearly as $\\sigma^2(t)$ increases. Additionally, the variance in $H$ is higher when $\\mu(t)$ is lower or $\\sigma^2(t)$ is higher, and changes in $\\sigma^2(t)$ have greater impacts when $\\mu(t)$ is low.", out.width='100%', cache=FALSE}
+knitr::include_graphics('../figures/mean-variance-5-by-5-hr-sims.png',
                         rel_path = FALSE)
 ```
 
-```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Additive Model for Location and Scale (GAMLS; Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma location-scale family of distributions ($\\tt{mgcv\\!::\\!gammals})$. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both the location (i.e., mean) of $H$ and its scale parameter. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in spatial needs strongly increases with mean spatial needs.", out.width='100%'}
-knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/simulation-regression-plots.png',
+```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated space-use requirements. The relationships were estimated using a Generalized Additive Model for Location and Scale (GAMLS; Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma location-scale family of distributions ($\\tt{mgcv\\!::\\!gammals})$. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both the location (i.e., mean) of $H$ and its scale parameter. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in space-use requirements strongly increases with mean space-use requirements.", out.width='100%', cache=FALSE}
+knitr::include_graphics('../figures/simulation-regression-plots.png',
                         rel_path = FALSE)
 ```
 
@@ -94,7 +94,7 @@ knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/simulation-regressi
 
 To reduce sampling variance between simulations at each time point in each panel of figure \@ref(fig:5-5-sims)), we used the same set of $2^{10} = 1024$ simulated tracks, which we generate in the `analysis/simulations/tracks.R` script. Most intermediate and diagnostic checks are not included in this document for the sake of brevity and simplicity, but their outputs and conclusions are listed in this section. In this script, we use the `ctmm` package [version 1.1.0, @fleming_ctmm_2021] for movement modeling; the `terra` package [version 1.7-39, @hijmans_terra_2023] to work with the simulated resource rasters; the `dplyr` [version 1.0.10, @wickham_dplyr_2022], `purrr` [version 0.3.5, @henry_purrr_2022], and `tidyr` [version 1.2.1, @wickham_tidyr_2022] packages for data wrangling; and the the `ggplot2` [version 3.4.0, @wickham_ggplot2_2016] and `cowplot` [version 1.1.1, @wilke_cowplot_2020] packages for plotting.
 
-```{r sims-example, echo=FALSE, eval=TRUE, fig.cap="Overview of how animals' spatial needs were simulated. (a.) Tracks were simulated using an Integrated Ornstein-Uhlenbeck model (IOU model, an infinitely diffusive and continous-velocity movement model), starting from the point $\\langle 0, 0 \\rangle$ (black and yellow square). (b.) Each time the track crossed into a new cell (green dots), the animal collected a random amount of resources that followed a Gamma distribution with common mean $\\mu (t)$ and variance $\\sigma^2 (t)$. (c.) Each time the animal collected more resources, its satiety (purple) increased. Once the animal collected sufficient resources, the animal stopped moving (i.e., the track was truncated). (d.) The process was repeated $2^{10}=1024$ times (13 tracks pictured in this panel). (e.) The final set of (truncated) tracks was then modeled using Ornstein-Uhlenbeck Foraging models to estimate the 95\\% home range estimates using Autocorrelated Kernel Density Estimates.", out.width='100%', fig.pos='!h'}
+```{r sims-example, echo=FALSE, eval=TRUE, fig.cap="Overview of how animals' space-use requirements were simulated. (a.) Tracks were simulated using an Integrated Ornstein-Uhlenbeck model (IOU model, an infinitely diffusive and continous-velocity movement model), starting from the point $\\langle 0, 0 \\rangle$ (black and yellow square). (b.) Each time the track crossed into a new cell (green dots), the animal collected a random amount of resources that followed a Gamma distribution with common mean $\\mu (t)$ and variance $\\sigma^2 (t)$. (c.) Each time the animal collected more resources, its satiety (purple) increased. Once the animal collected sufficient resources, the animal stopped moving (i.e., the track was truncated). (d.) The process was repeated $2^{10}=1024$ times (13 tracks pictured in this panel). (e.) The final set of (truncated) tracks was then modeled using Ornstein-Uhlenbeck Foraging models to estimate the 95\\% home range estimates using Autocorrelated Kernel Density Estimates.", out.width='100%', fig.pos='!h', cache=FALSE}
 knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/simulation-example.png',
                         rel_path = FALSE)
 ```
@@ -213,7 +213,7 @@ Using three tracks generated with three arbitrary seeds (1, 2, and 3), we explor
 
 **Exploratory plot \@ref(fig:dt-sensitivity)d.** The three tracks used for these exploratory plots are sufficiently different that we considered them to be a representative sample of movement tracks simulated by the OUF model. All three tracks have a reasonable amount of both tortuous and directed movement.
 
-```{r dt-sensitivity, fig.cap="Exploratory plots used to decide an appropriate sampling interval. (a.) Histograms of the number of encounters as a function of the interval between encounters, with a binwith of 30 seconds. Although some encounters occur with less than 30 seconds between them, approximately 93\\% of them occur at least 30 seconds apart. (b.) Number of detected encounters as a function of sampling interval. The colored lines indicate the estimated relationship based on a Generalized Additive Model fit using the $\\tt{geom\\_smooth}$ function from the $\\tt{ggplot2}$ package. Although the number of encounters detected decreases as sampling interval doubles, the loss at $\\Delta = 30$s is negligible. (c.) Beginning of the track generated with seed \"1\" (purple line) for different sampling intervals. Red dots indicate locations where the animal remained in the same cell, while the blue squares indicate when an animal was in a new cell and thus encountered food. While the number of encounters detected decreases as the sampling interval increases, most of the encounters lost at $\\Delta t = 30$s occured because the animal remained almost adjacent to the borders between cells. Additionally, the track at $\\Delta t = 30$s is still sufficiently tortuous to represent realistic animal movement. (d.) The three tracks used in these tests over the raster used for determining when the animals encountered food.", out.width='100%', echo=FALSE, eval=TRUE}
+```{r dt-sensitivity, fig.cap="Exploratory plots used to decide an appropriate sampling interval. (a.) Histograms of the number of encounters as a function of the interval between encounters, with a binwith of 30 seconds. Although some encounters occur with less than 30 seconds between them, approximately 93\\% of them occur at least 30 seconds apart. (b.) Number of detected encounters as a function of sampling interval. The colored lines indicate the estimated relationship based on a Generalized Additive Model fit using the $\\tt{geom\\_smooth}$ function from the $\\tt{ggplot2}$ package. Although the number of encounters detected decreases as sampling interval doubles, the loss at $\\Delta = 30$s is negligible. (c.) Beginning of the track generated with seed \"1\" (purple line) for different sampling intervals. Red dots indicate locations where the animal remained in the same cell, while the blue squares indicate when an animal was in a new cell and thus encountered food. While the number of encounters detected decreases as the sampling interval increases, most of the encounters lost at $\\Delta t = 30$s occured because the animal remained almost adjacent to the borders between cells. Additionally, the track at $\\Delta t = 30$s is still sufficiently tortuous to represent realistic animal movement. (d.) The three tracks used in these tests over the raster used for determining when the animals encountered food.", out.width='100%', echo=FALSE, eval=TRUE, cache=FALSE}
 knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/thinning-examples.png',
                         rel_path = FALSE)
 ```
@@ -224,7 +224,7 @@ knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/thinning-examples.p
 
 Script: `analysis/hr-simulation-extreme-scenarios.R`
 
-In this script, we check how many tracks are necessary to produce stable and accurate estimates of the spatial needs. We do so by estimating the home ranges of animals for varying numbers of track in the best-case scenario (highest $\e(R)$ and lowest $\var(R)$) and worst-case scenario (lowest $\e(R)$ and highest $\var(R)$).
+In this script, we check how many tracks are necessary to produce stable and accurate estimates of the space-use requirements. We do so by estimating the home ranges of animals for varying numbers of track in the best-case scenario (highest $\e(R)$ and lowest $\var(R)$) and worst-case scenario (lowest $\e(R)$ and highest $\var(R)$).
 
 ```{r}
 set.seed(1) # for consistent results
@@ -318,10 +318,12 @@ ggplot(saturation_days, aes(n_days, hr)) +
   scale_x_continuous(expression(Number~of~days~sampled~(log[2]~scale)),
                      trans = 'log2', breaks = c(2, 16, 128, 1024),
                      limits = c(2, 1100)) +
-  scale_y_log10(expression(Estimated~home~range~(log[10]~scale)))
+  scale_y_continuous(expression(atop(Estimated~'space-use',
+                                     requirements~(log[2]~scale))),
+                     trans = 'log2')
 ```
 
-```{r, eval=TRUE, echo=FALSE, fig.cap="Estimated spatial needs as a function of the number of days sampled for an animal in a habitat with the highest $\\e(R)$ and lowest $\\var(R)$ (left) and an animal with the lowest $\\e(R)$ and highest $\\var(R)$ (right). In both cases, 100 days are sufficient to produce stable estimates of spatial needs."}
+```{r, eval=TRUE, echo=FALSE, fig.cap="Estimated space-use requirements as a function of the number of days sampled for an animal in a habitat with the highest $\\e(R)$ and lowest $\\var(R)$ (left) and an animal with the lowest $\\e(R)$ and highest $\\var(R)$ (right). In both cases, 100 days are sufficient to produce stable estimates of space-use requirements.", cache=FALSE}
 knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/hr-over-days.png',
                         rel_path = FALSE)
 ```
@@ -338,7 +340,7 @@ knitr::include_graphics('H:/GitHub/hr-resource-stoch/figures/hr-over-days.png',
 
 # Modeling the results from the simulations
 
-This final section illustrates the location-scale GAM used to estimate the effects of resource abundance and stochasticity on the simulated spatial needs. Although the model was fit to both the 95% and core (50%) home range estimates, the results were presented only for the 95% quantile for simplicity. The home range was caulculated using a Gaussian approximation using the simulated organism's positional variance:
+This final section illustrates the location-scale GAM used to estimate the effects of resource abundance and stochasticity on the simulated space-use requirements. Although the model was fit to both the 95% and core (50%) home range estimates, the results were presented only for the 95% quantile for simplicity. The home range was caulculated using a Gaussian approximation using the simulated organism's positional variance:
 
 $$\widehat{h_q} = -2 \log(1 - q) \pi \sigma^2_{pos},$$
 
@@ -346,7 +348,7 @@ where $widehat{h_q}$ is the estimated home range for the $q^{\text{th}}$ quantil
 
 $$\widehat{h_{0.95}} / \widehat{h_{0.5}} = \frac{-2 \log(1 - 0.95) \pi \sigma^2_{pos}}{-2 \log(1 - 0.5) \pi \sigma^2_{pos}} = \frac{\log(1 - 0.95)}{\log(1 - 0.5)} = \frac{\log(0.05)}{\log(0.5)} = \log_{0.5}(0.05) \approx 4.322,$$
 
-and therefore $\e(R)$ and $\var(R)$ would have similar effects (but about 4.322 times weaker) on the core home range than they do on the 95% home range. Note that we used this approximation because, unlike real organisms, the simulated organism did not use the available space selectively (e.g., spending more time near cell boundaries), so the Gaussian approximation is appropriate. When estimating spatial needs based on empirical data, we suggest estimating utilization distributions using methods such as Autocorrelated Kernel Density Estimation [see Appendix 3 on empirical modeling and @noonan_comprehensive_2019; @alston_mitigating_2022; @silva_autocorrelationinformed_2022].
+and therefore $\e(R)$ and $\var(R)$ would have similar effects (but about 4.322 times weaker) on the core home range than they do on the 95% home range. Note that we used this approximation because, unlike real organisms, the simulated organism did not use the available space selectively (e.g., spending more time near cell boundaries), so the Gaussian approximation is appropriate. When estimating space-use requirements based on empirical data, we suggest estimating utilization distributions using methods such as Autocorrelated Kernel Density Estimation [see Appendix 3 on empirical modeling and @noonan_comprehensive_2019; @alston_mitigating_2022; @silva_autocorrelationinformed_2022].
 
 ```{r, eval=TRUE}
 # switch data to long format with a column of quantile
@@ -374,7 +376,7 @@ ggplot(sims, aes(mu, sigma2)) +
   theme_bw()
 ```
 
-The abundance of data for the average $\e(R)$ and $\var(R)$ did not create biases in the models, since removing such values had no appreciable effect on the model estimates (not shown). To estimate the effects of resource abundance and stochasticity on the simulated spatial needs, we fit 3 location-scale GAMs (GAMLSs) with a location-scale gamma distribution (since home ranges are strictly positive) of increasing complexity. We hypothesized that the effect of $\e(R)$ would depend on $\var(R)$ (and the effect of $\var(R)$ would depend on $\e(R)$), since we expected organisms to respond to changes in $\mu(t)$ less in predictable environments than in stochastic ones. The three models are detailed below and compared using the Akaike Information Criterion and the Bayesian Information Criterion. Both information criteria demonstrate that the third model, which accounts for the interaction effects of $\e(R)$ and $\var(R)$, is the best model.
+The abundance of data for the average $\e(R)$ and $\var(R)$ did not create biases in the models, since removing such values had no appreciable effect on the model estimates (not shown). To estimate the effects of resource abundance and stochasticity on the simulated space-use requirements, we fit 3 location-scale GAMs (GAMLSs) with a location-scale gamma distribution (since home ranges are strictly positive) of increasing complexity. We hypothesized that the effect of $\e(R)$ would depend on $\var(R)$ (and the effect of $\var(R)$ would depend on $\e(R)$), since we expected organisms to respond to changes in $\mu(t)$ less in predictable environments than in stochastic ones. The three models are detailed below and compared using the Akaike Information Criterion and the Bayesian Information Criterion. Both information criteria demonstrate that the third model, which accounts for the interaction effects of $\e(R)$ and $\var(R)$, is the best model.
 
 ```{r, eval=TRUE}
 # marginal effects of mu and sigma only (linear on the log link scale)
